fixed issued where overflow-x is ignored by mobile browsers

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,7 +9,8 @@
   box-sizing: border-box;
 }
 
-body {
+body,
+html {
   @include d1-mq('large-keep') {
     overflow-x: hidden;
     position: relative;
